fix default manual list going off screen

--- a/src/styles/popups.css
+++ b/src/styles/popups.css
@@ -65,4 +65,5 @@ form input[name="url"] {
 .manual-choices-group {
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
